TP3-CORRECTED/front-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: front-training-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: front-training-app
